# optee-pqc

./: README.md
pqc_ping/: .gitignore  Android.mk  CLAUDE.md  CMakeLists.txt  README.md
pqc_ping/host/: Makefile  bench.c  bench.h  cmd_bench.c  cmd_bench.h  cmd_harden.c  cmd_harden.h  cmd_kem.c  cmd_kem.h  cmd_sig.c  cmd_sig.h  cmd_store.c  cmd_store.h  main.c  randombytes_host.c
pqc_ping/host/include/: tee_internal_api.h
pqc_ping/results/summary/: final_summary.md
pqc_ping/scripts/: run_bench.sh  run_func.sh
pqc_ping/ta/: Android.mk  Makefile  cmd_bench.c  cmd_kem.c  cmd_sig.c  cmd_store.c  memprof.sh  memprof_results.md  pqc_ping_ta.c  sizeprof.sh  sub.mk  ta_internal.h  user_ta_header_defines.h
pqc_ping/ta/include/: pqc_algo.h  pqc_ping_ta.h
pqc_ping/ta/pqclean/common/: fips202.c  randombytes.c
pqc_ping/ta/pqclean/kem/: compat.h  sub.mk
pqc_ping/ta/pqclean/sig/: params.h  sub.mk
